--- a/css/style.css
+++ b/css/style.css
@@ -277,71 +277,71 @@ header h1::after {
     }
 
     2.5% {
-        content: "M|";
+        content: "D|";
     }
 
     5% {
-        content: "Mo|";
+        content: "Da|";
     }
 
     7.5% {
-        content: "Mos|";
+        content: "Dan|";
     }
 
     10% {
-        content: "Most|";
+        content: "Dani|";
     }
 
     12.5% {
-        content: "Mosta|";
+        content: "Danie|";
     }
 
     15% {
-        content: "Mostaf|";
+        content: "Daniel|";
     }
 
     17.5% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     20% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     22.5% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     25% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     27.5% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     30% {
-        content: "Mostaf|";
+        content: "Daniel|";
     }
 
     32.5% {
-        content: "Mosta|";
+        content: "Danie|";
     }
 
     35% {
-        content: "Most|";
+        content: "Dani|";
     }
 
     37.5% {
-        content: "Mos|";
+        content: "Dan|";
     }
 
     40% {
-        content: "Mo|";
+        content: "Da|";
     }
 
     42.5% {
-        content: "M|";
+        content: "D|";
     }
 
     45% {
@@ -443,71 +443,71 @@ header h1::after {
     }
 
     2.5% {
-        content: "M|";
+        content: "D|";
     }
 
     5% {
-        content: "Mo|";
+        content: "Da|";
     }
 
     7.5% {
-        content: "Mos|";
+        content: "Dan|";
     }
 
     10% {
-        content: "Most|";
+        content: "Dani|";
     }
 
     12.5% {
-        content: "Mosta|";
+        content: "Danie|";
     }
 
     15% {
-        content: "Mostaf|";
+        content: "Daniel|";
     }
 
     17.5% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     20% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     22.5% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     25% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     27.5% {
-        content: "Mostafa|";
+        content: "Daniels|";
     }
 
     30% {
-        content: "Mostaf|";
+        content: "Daniel|";
     }
 
     32.5% {
-        content: "Mosta|";
+        content: "Danie|";
     }
 
     35% {
-        content: "Most|";
+        content: "Dani|";
     }
 
     37.5% {
-        content: "Mos|";
+        content: "Dan|";
     }
 
     40% {
-        content: "Mo|";
+        content: "Da|";
     }
 
     42.5% {
-        content: "M|";
+        content: "D|";
     }
 
     45% {
